force-app/main/default/objects/Invoice_Request__c/Invoice_Request__c.object-meta.xml
<CustomObject>
    <label>Invoice Request</label>
    <nameField>
        <label>Invoice Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>