force-app/main/default/objects/Invoice_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoice Requests</relationshipLabel>
    <relationshipName>Invoice_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>