force-app/main/default/objects/Invoice_Request__c/fields/Original_Quote__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Invoice Requests</relationshipLabel>
    <relationshipName>Invoice_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>