force-app/main/default/objects/Invoice_Request__c/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Invoice Requests</relationshipLabel>
    <relationshipName>Invoice_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>