force-app/main/default/objects/Invoice_Request__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Invoice Requests</relationshipLabel>
    <relationshipName>Invoice_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>